# imdb_db

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: queries.md
scripts/: biweekly_update.sh
src/imdb/: __init__.py  cli.py  config.py  db.py  downloader.py  importer.py  logger.py  models.py
tests/: test_importer.py  test_models.py
