[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imdb"
version = "1.0.0"
description = "CLI para datos IMDb Non-Commercial en PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Marc" }]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.28.0",
]

[project.scripts]
imdb = "imdb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/imdb"]

[tool.hatch.build.targets.sdist]
include = ["src/imdb"]
