[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imdb-db"
version = "1.0.0"
description = "CLI para descargar e importar los IMDb Non-Commercial Datasets a PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "kaizen-mcv" }]
keywords = ["imdb", "postgresql", "etl", "cli", "dataset"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/kaizen-mcv/imdb_db"
Repository = "https://github.com/kaizen-mcv/imdb_db"
Issues = "https://github.com/kaizen-mcv/imdb_db/issues"

[project.scripts]
imdb = "imdb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/imdb"]

[tool.hatch.build.targets.sdist]
include = ["src/imdb"]

[tool.ruff]
line-length = 80
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]
ignore = [
    "E501", # line too long (ya controlado por el formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
pythonpath = ["src"]
